# python-json-pointer

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  README  README.md  jsonpointer.py  makefile  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tests.py  tox.ini
.github/workflows/: test.yaml
doc/: Makefile  commandline.rst  conf.py  index.rst  mod-jsonpointer.rst  tutorial.rst
jsonpointer/: __init__.py  __main__.py  jsonpointer.py
test/: a.json  b.json  ptr.json
tests/: tests.py
